NLP TP/texts/robotics/robotics.stackexchange_0000036800.txt
Q:

problem installing ros in fedora 13

Hi,
I'm trying to install ROS Electric in Linux Fedora 13, and I get the error below. 
Someone experiencing the same? What I'm doing wrong? 
I followed the Fedora Installation Instructions, and already had ROS installed in other machine and everything went fine, but I realy need this in Fedora 13.
Bootstrapping ROS build  
Detected ros_comm bootstrapping it too. 
/root/ros/ros/bin/rosmake:62: Warning: 'with' will become a reserved keyword in Python 2.6 
File "/root/ros/ros/bin/rosmake", line 62
with rosmake.Printer():
^ 
SyntaxError: invalid syntax 
Traceback (most recent call last): 
File "/usr/bin/rosinstall", line 5, in  pkg_resources.run_script('rosinstall==0.5.22', 'rosinstall') 
File "/usr/lib/python2.6/site-packages/pkg_resources.py", line 467, in run_script
self.require(requires)[0].run_script(script_name, ns) 
File "/usr/lib/python2.6/site-packages/pkg_resources.py", line 1200, in run_script
execfile(script_filename, namespace, namespace) 
File "/usr/lib/python2.6/site-packages/rosinstall-0.5.22-py2.6.egg/EGG-INFO/scripts/rosinstall", line 679, in 
sys.exit(not rosinstall_main(sys.argv))
File "/usr/lib/python2.6/site-packages/rosinstall-0.5.22-py2.6.egg/EGG-INFO/scripts/rosinstall", line 670, in rosinstall_main 
subprocess.check_call("source %s && rosmake ros%s --rosdep-install%s" % (os.path.join(options.path, 'setup.sh'), ros_comm_insert, rosdep_yes_insert), shell=True, executable='/bin/bash')
File "/usr/lib/python2.6/subprocess.py", line 488, in check_call
raise CalledProcessError(retcode, cmd)
subprocess.CalledProcessError: Command 'source /root/ros/setup.sh && rosmake ros ros_comm --rosdep-install' returned non-zero exit status 1

Originally posted by tsantos on ROS Answers with karma: 3 on 2012-01-01
Post score: 0

A:

ROS Electric is designed to work with Python 2.6, which I believe is also the default for Fedora 13.  See REP 3
Based on your error message you're running an older version of python which is going to be a big challenge, needing to patch many files.

Originally posted by tfoote with karma: 58457 on 2012-01-02
This answer was ACCEPTED on the original site
Post score: 3

